add actions classes