@@ -1,12 +1,12 @@
 package com.demoqa.utils.browser;
 
-import com.demoqa.utils.emulatorDeviceWeb.Device;
-import com.demoqa.utils.emulatorDeviceWeb.JsonReader;
-import com.demoqa.utils.externalFileUtility.PropertyUtility;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import com.demoqa.utils.emulator_device_web.Device;
+import com.demoqa.utils.emulator_device_web.JsonReader;
+import com.demoqa.utils.exceptions.FileException;
+import com.demoqa.utils.external_file_utility.PropertyUtility;
 import org.openqa.selenium.Dimension;
 import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.WebDriverException;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.firefox.FirefoxDriver;
@@ -15,17 +15,17 @@ import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.support.ThreadGuard;
 
 import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.HashMap;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Map;
 
 //ThreadLocal para que cada thread tenga su propio driver
 //ThreadGuard para que aseguremos que el controlador solo sea llamado por el hilo que lo creo.
 
 public class BrowserFactory {
+    private BrowserFactory() {}
 
     private static final ThreadLocal<WebDriver> driver = new ThreadLocal<>();
-    private static final Logger logger = LogManager.getLogger(BrowserFactory.class);
 
     private static final PropertyUtility prop = new PropertyUtility();
     private static final String HUB_URL = prop.initProperties("selenium_grid").getProperty("hub.url");
@@ -60,16 +60,16 @@ public class BrowserFactory {
                 return createRemoteDriver(browser, device);
             }
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            throw new WebDriverException(e);
         }
     }
 
-    private static Device getDevice(String deviceName) {
+    private static Device getDevice(String deviceName) throws FileException {
         JsonReader jsonReader = new JsonReader(DEVICES_FILE);
         return jsonReader.getDevice(deviceName);
     }
 
-    private static WebDriver createRemoteDriver(String browser, Device device) throws MalformedURLException {
+    private static WebDriver createRemoteDriver(String browser, Device device) throws MalformedURLException, URISyntaxException {
         switch (browser) {
             case "chrome":
                 setDriver(createChromeDriver(device));
@@ -87,9 +87,9 @@ public class BrowserFactory {
     private static WebDriver createLocalDriver(String browser, Device device) {
         switch (browser) {
             case "chrome":
-                ChromeOptions ChromeOptions = new ChromeOptions();
-                configureChromeOptions(ChromeOptions, device);
-                setDriver(ThreadGuard.protect(new ChromeDriver(ChromeOptions)));
+                ChromeOptions chromeOptions = new ChromeOptions();
+                configureChromeOptions(chromeOptions, device);
+                setDriver(ThreadGuard.protect(new ChromeDriver(chromeOptions)));
                 break;
             case "firefox":
                 FirefoxOptions fireOptions = new FirefoxOptions();
@@ -103,16 +103,16 @@ public class BrowserFactory {
         return getDriver();
     }
 
-    private static WebDriver createChromeDriver(Device device) throws MalformedURLException {
+    private static WebDriver createChromeDriver(Device device) throws MalformedURLException, URISyntaxException {
         ChromeOptions options = new ChromeOptions();
         configureChromeOptions(options, device);
-        return new RemoteWebDriver(new URL(HUB_URL), options);
+        return new RemoteWebDriver(new URI(HUB_URL).toURL(), options);
     }
 
-    private static WebDriver createFirefoxDriver(Device device) throws MalformedURLException {
+    private static WebDriver createFirefoxDriver(Device device) throws MalformedURLException, URISyntaxException {
         FirefoxOptions options = new FirefoxOptions();
         configureFirefoxOptions(options, device);
-        return new RemoteWebDriver(new URL(HUB_URL), options);
+        return new RemoteWebDriver(new URI(HUB_URL).toURL(), options);
     }
 
     private static void configureChromeOptions(ChromeOptions options, Device device) {
